Fixed wrap of button in toolbar in IE7. (Closes: #1583)

--- a/album/views/_css/album.css
+++ b/album/views/_css/album.css
@@ -354,7 +354,7 @@
 
 .ui-albummanager-subbuttonbar
 {
-	display:inline-block;
+	display:inline;
 	margin-left:.5em;
 	margin-right:.5em;
 }
